force-app/main/default/objects/Survey_Responses__c/fields/Customer_Service_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Satisfaction__c</fullName>
    <inlineHelpText>Q# 10 - 2017 CSAT response</inlineHelpText>
    <label>Customer Service Satisfaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>