force-app/main/default/objects/Survey_Responses__c/fields/Forms_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Forms_of_Communication__c</fullName>
    <inlineHelpText>Q# 20 - 2017 CSAT Response</inlineHelpText>
    <label>Forms of Communication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>