force-app/main/default/objects/Survey_Responses__c/fields/Likely_to_Continue_Services__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_Continue_Services__c</fullName>
    <inlineHelpText>Q# 23 - 2017 CSAT Response</inlineHelpText>
    <label>Likely to Continue Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>