force-app/main/default/objects/Survey_Responses__c/fields/Service_Continuation_Unlikely__c.field-meta.xml
<CustomField>
    <fullName>Service_Continuation_Unlikely__c</fullName>
    <inlineHelpText>Q# 24 - 2017 CSAT Response - if Q#23 response is no or unlikely</inlineHelpText>
    <label>Service Continuation Unlikely</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>