force-app/main/default/objects/Survey_Responses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Customer_Service_Satisfaction__c</columns>
    <columns>Forms_of_Communication__c</columns>
    <columns>Likely_to_Continue_Services__c</columns>
    <columns>Service_Continuation_Unlikely__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>